--- a/slotmachine-style.css
+++ b/slotmachine-style.css
@@ -80,11 +80,12 @@ body {
       margin: 10px 0;
   }
   #nav2 {
-      margin-top: 10px;
+      margin: 20px;
   }
   #nav2 .btn
   {
-    margin: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
 }
 
